sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getValueCount();
  var i = 0;
  var swap = falsle;
  do{
    swap = false
    if(ecart > 1){
      ecart = ((ecart.toDouble)/1.3).toInt
    }
    i = 0;
    while(i + ecart < getValueCount()){
      if(!isSmaller(i,i+ecart)){
        swap(i,i+ecart);
        swap = true
      }
    i = i+1;
    }
  }while(ecart>=1 | swap)
}